WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248959
REGRESSION(
255406@main
): caused an animation bug inside form controls
https://bugs.webkit.org/show_bug.cgi?id=248959
Summary
REGRESSION(255406@main): caused an animation bug inside form controls
WebKit Commit Bot
Reported
2022-12-08 10:32:34 PST
https://commits.webkit.org/255406@main
introduced a regression: caused an animation bug inside form controls This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 255406@main
(9.48 KB, patch)
2022-12-08 10:32 PST
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2022-12-08 10:32:41 PST
Created
attachment 463942
[details]
REVERT of
255406@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
alan
Comment 2
2022-12-08 10:35:07 PST
<
rdar://102381816
>
EWS
Comment 3
2022-12-08 11:02:40 PST
Committed
257574@main
(c7831c53abec): <
https://commits.webkit.org/257574@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 463942
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug