Cherry-pick c7831c53abec. rdar://problem/102381816

Unreviewed, reverting r255406@main.
    https://bugs.webkit.org/show_bug.cgi?id=248959

    caused an animation bug inside form controls

    Reverted changeset:

    "Handle transform changes causing overflow updates"
    https://bugs.webkit.org/show_bug.cgi?id=243812
    https://commits.webkit.org/255406@main

    Canonical link: https://commits.webkit.org/257574@main

Canonical link: https://commits.webkit.org/252432.930@safari-7614-branch