Source/WebCore/rendering/RenderElement.h
@@ -135,7 +135,7 @@ public:
     void setChildNeedsLayout(MarkingBehavior = MarkContainingBlockChain);
     void clearChildNeedsLayout();
     void setNeedsPositionedMovementLayout(const RenderStyle* oldStyle);
-    void setNeedsSimplifiedNormalFlowLayout(const RenderStyle* oldStyle);
+    void setNeedsSimplifiedNormalFlowLayout();
 
     virtual void paint(PaintInfo&, const LayoutPoint&) = 0;
 
